new: creation of 'Orchestra' service
[PFE-50]
- new: api_vbox has /startvm route
- scenario start workshop is working
- wip: big update on db_dojo
